--- a/myapp/app/build.gradle
+++ b/myapp/app/build.gradle
@@ -3,17 +3,23 @@ plugins {
     id 'eclipse'
 }
 
+// CLI 환경에서 'build' 작업을 수행할 때 사용하는 설정
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8' 
     sourceCompatibility = '17'
     targetCompatibility = '17'
 }
+
+// 'eclipse' 플러그인 설정:
 eclipse {
+
+    // => eclipse 프로젝트 이름 설정하기
     project {
         name = "myapp"
     }
-    jdt {
-      //if you want to alter the java versions (by default they are configured with gradle java plugin settings):
+
+    // => eclipse IDE 설정하기
+    jdt {  
       sourceCompatibility = 17
       targetCompatibility = 17
       javaRuntimeName = "JavaSE-17"
